# trader

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  run.ps1  run.sh
.github/workflows/: python-quality.yml  test-ci.yml
.runtime/: deepseek_attribution.json  deepseek_cache.json  download_codes_snapshot.txt  factor_ic.json  factor_snapshots.sqlite3  history_cache.sqlite3  latest_quotes.json  latest_recommendations.swing_picks.json  latest_recommendations.tomorrow_picks.json  paper_trading.sqlite3  recommendation_state.json  strategy_status.json  strategy_validation.sqlite3  tomorrow_iteration.json
.runtime/backups/: strategy_validation_20260708_170433_auto_snapshot.sqlite3  strategy_validation_20260708_170438_auto_snapshot.sqlite3  strategy_validation_20260708_170514_auto_snapshot.sqlite3  (+26 more)
config/: production_baseline.json  runtime.json
docs/: bug.txt  celue.md  hi.md  issue.md  issue1.md  money.md  need.md  plan.md  plan1.md  plan2.md  plan3.md  plan_c.md  plan_sudu.md  plan_youhua.md  production_freeze.md  queston.md  recommendation-strategy.md  risk_blacklist.example.csv  risk_blacklist.example.json  skill.md  software-business-design.md  software_design.md  strage.md  strategies.md  strategy_and_prediction.md  strategy_optimization_plan.md  times.md  user_requirements_strategy_validation.md
experiments/: registry.jsonl
requirements/: dev.txt
scripts/: check_refactor_quality.py  dependency_fingerprint.py  test.sh
static/: app.js  recommendation-app.js  recommendation-renderers.js  recommendation-status.js  recommendation-stream.css  recommendation-tables.js  recommendation-utils.js  styles.css  validation-app.js  validation-renderers.js  validation-stock-prediction.js  validation-ui.js
stock_analyzer/: __init__.py  app.py  app_container.py  app_response_support.py  app_runtime_support.py  app_support.py  background_workers.py  backtest.py  calibrate.py  candidate_pipeline.py  config.py  daily_data.py  daily_job.py  data_health.py  deepseek_client.py  deepseek_rules.py  deepseek_scheduler.py  ensemble.py  event_alpha.py  event_risk.py  execution_policy.py  expected_return_model.py  experiment_registry.py  factor_ic.py  factor_snapshot.py  factors.py  fundamentals.py  history_cache.py  jobs.py  long_term_watch.py  market_data.py  meta_labeling.py  normalization.py  oos_report.py  p3_experiments.py  paper_trading.py  performance.py  pit_snapshot.py  point_in_time.py  portfolio.py  (+46 more)
templates/: index.html
tests/: conftest.py  pipeline_factory.py  test_app_container_cache.py  test_app_entrypoint.py  test_app_response_support.py  test_background_workers.py  test_calibrate_deepseek.py  test_codex2_compatibility.py  test_config_environment.py  test_daily_data.py  test_deepseek_client.py  test_deepseek_money_plan.py  test_deepseek_scheduler.py  test_dependency_fingerprint.py  test_factor_sentiment_refresh.py  test_frontend_contracts.py  test_history_cache_resilience.py  test_issue1_contracts.py  test_jobs_cli.py  test_long_term_watch.py  test_performance_contracts.py  test_prediction.py  test_production_freeze.py  test_recommendation_cache_services.py  test_recommendation_quote_refresh.py  test_recommendation_runtime_support.py  test_runtime_json.py  test_runtime_supervisor.py  test_scoring.py  test_server_security.py  test_sqlite_support.py  test_stance_tracking.py  test_strategy_document_contracts.py  test_strategy_tuning_atomic.py  test_strategy_tuning_deepseek.py  test_strategy_validation_deepseek.py  test_validation_runtime_support.py  test_validation_schema_migrations.py  test_web_quote_background.py
(+689 files in other folders)
