[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-research-dashboard"
version = "0.1.0"
description = "Local A-share recommendation research and strategy-validation dashboard"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "akshare>=1.14.0",
    "Flask>=2.2,<3.1",
    "numpy>=1.24,<3",
    "pandas>=1.5,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.22.0",
    "tushare>=1.2.89",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "coverage[toml]>=7.10,<8",
    "mypy>=1.18,<3",
    "pytest>=7,<9",
    "pytest-xdist>=3,<4",
    "ruff>=0.15,<1",
]

[tool.setuptools.packages.find]
include = ["stock_analyzer*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".runtime", ".venv"]

[tool.ruff.lint]
# Keep the repository-wide baseline focused on correctness. New and migrated
# modules use the stricter rule set in `make lint-strict`.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = [
    "scripts/dependency_fingerprint.py",
    "stock_analyzer/background_workers.py",
    "stock_analyzer/config.py",
    "stock_analyzer/deepseek_scheduler.py",
    "stock_analyzer/realtime_quotes.py",
    "stock_analyzer/runtime.py",
    "stock_analyzer/server_security.py",
    "stock_analyzer/services/recommendation_quotes.py",
]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["stock_analyzer"]

[tool.coverage.report]
fail_under = 50
precision = 2
show_missing = true
skip_empty = true
