[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-research-dashboard"
version = "0.2.0"
description = "Local A-share recommendation research dashboard"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "akshare>=1.14.0",
    "Flask>=2.2,<3.1",
    "requests>=2.22.0",
    "tushare>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "coverage[toml]>=7.10,<8",
    "mypy>=1.18,<3",
    "pytest>=7,<9",
    "pytest-xdist>=3,<4",
    "ruff==0.15.21",
]

[project.scripts]
trader-server = "trader.entrypoints.server:main"
trader-cli = "trader.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trader*"]

[tool.setuptools.package-data]
"trader.web" = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "static/*.svg",
    "static/vendor/*",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".runtime", ".venv", "docs/archive"]

[tool.ruff.lint]
# Keep the repository-wide baseline focused on correctness. New and migrated
# modules use the stricter rule set in `make lint-strict`.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src/trader"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["trader"]

[tool.coverage.report]
fail_under = 50
precision = 2
show_missing = true
skip_empty = true
